# counterfactuals

./: .gitignore  .pre-commit-config.yaml  404.html  CLAUDE.md  Counterfactuals_gce_no_plaus_k_abl.csv  Counterfactuals_gce_plaus_k_abl.csv  Counterfactuals_no_plaus_all_methods.csv  Counterfactuals_plaus_all_methods_old.csv  LICENSE  README.md  aggregate_ppcefr_results.py  all.sh  automated_table.py  benchmark_results_20251120_015254.md  benchmark_results_20251120_021154.md  best_model.pth  calc_acc.py  collect_results.py  config.yaml  cost_calculator.py  debug_lr_checkpoint.pt  different_techniques.ipynb  distances.tex  distances_mlperceptron.tex  distances_mnlogisticregression.tex  distances_node.tex  ds.ipynb  environment.yaml  experiments.sh  generate_all_tables.sh  generate_latex_tables.py  generative_discriminative_model_exp.py  generative_model_exp.py  index.html  ll.txt  ll_calc.py  main_metrics_mlperceptron.tex  main_metrics_mnlogisticregression.tex  main_metrics_node.tex  metrics.md  (+62 more)
.github/workflows/: ci.yml  docs-deply.yml  publish.yml
DOCUMENTATION_PLAN/: index.html
alternative_methods/: ares.py  ares_cv.py  artelt.py  artelt_exp.py  artelt_exp_cv.py  casebased_sace.py  casebased_sace_exp.py  casebased_sace_exp_cv.py  ce_flow.py  ce_flow_exp.py  cearm.py  cegp_exp.py  cegp_exp_cv.py  cem_exp.py  cem_exp_cv.py  diffemorphic_exp.py  global_ce.py  globe_ce.py  globe_ce_cv.py  wach_exp.py  wach_exp_cv.py
bash_scripts/: run_ablation_alpha.sh  run_ablation_loss.sh  run_alpha_ablation.sh  run_artelt.sh  run_cbce.sh  run_cv.sh  run_k_ablation.sh  run_ppcef.sh  run_reference_methods.sh
benchmarks/: index.html
benchmarks/metrics/: index.html
benchmarks/results/: index.html
benchmarks/running/: index.html
cel/: __init__.py  utils.py
cel/cf_methods/: __init__.py  counterfactual_base.py  global_counterfactual_mixin.py  local_counterfactual_mixin.py  tf_compat.py
cel/datasets/: __init__.py  file_dataset.py  initial_transforms.py  method_dataset.py  regression_file_dataset.py  traintest_file_dataset.py
cel/dequantization/: __init__.py  dequantizer.py  variational_dequantizer.py
cel/losses/: __init__.py  binary_disc_loss.py
cel/metrics/: __init__.py  base.py  basic_metrics.py  distance.py  diversity.py  metrics.py  orchestrator.py  plausibility.py  regression_metrics.py  (+2 more)
conf/: config.yaml  config_ares.yaml  config_cegp.yaml  config_global_ce.yaml  config_globe_ce.yaml  config_train_disc_model.yaml  config_train_gen_model.yaml  config_train_models.yaml
contributing/: index.html
counterfactuals/: __init__.py  plot_utils.py  sparsemax.py  utils.py
data/: adult.csv  adult_raw.csv  audit.csv  bank_marketing.csv  blobs.csv  moons.csv  moons_with_blob.csv  wine.csv
datasets/: index.html
docs/: DOCUMENTATION_PLAN.md  contributing.md  gen_ref_pages.py  index.md  library_overview.md  ppcef_pipeline.md  troubleshooting.md
experiment_scripts/: run_train_and_experiment.py
getting-started/: index.html
methods/: index.html
methods_notebooks/: 0.wach.ipynb  1.artelt.ipynb  2.ppcef.ipynb  3.dice.ipynb  5.glance.ipynb  PPCEF-R.ipynb  best_model.pth  c_chvae.ipynb  cet_checkpoint.pt  checkpoint.pth  glance_checkpoint.pt  globe_ce.ipynb
models/: disc_model_LR_AuditDataset.pt  disc_model_LR_HelocDataset.pt  disc_model_LR_LawDataset.pt  disc_model_LR_MoonsDataset.pt  disc_model_MLP_AuditDataset.pt  disc_model_MLP_HelocDataset.pt  disc_model_MLP_LawDataset.pt  disc_model_MLP_MoonsDataset.pt  gen_model_FLOW_orig_AuditDataset.pt  gen_model_FLOW_orig_AuditDataset_cnf.pt  gen_model_FLOW_orig_AuditDataset_maf.pt  gen_model_FLOW_orig_AuditDataset_realnvp.pt  gen_model_FLOW_orig_HelocDataset.pt  gen_model_FLOW_orig_HelocDataset_cnf.pt  gen_model_FLOW_orig_HelocDataset_maf.pt  gen_model_FLOW_orig_HelocDataset_realnvp.pt  gen_model_FLOW_orig_LawDataset.pt  gen_model_FLOW_orig_LawDataset_cnf.pt  gen_model_FLOW_orig_LawDataset_realnvp.pt  gen_model_FLOW_orig_MoonsDataset.pt  gen_model_FLOW_orig_MoonsDataset_cnf.pt  gen_model_FLOW_orig_MoonsDataset_realnvp.pt  gen_model_orig_HelocDataset.pt  gen_model_orig_LawDataset.pt  gen_model_orig_MoonsDataset.pt  gen_model_relabeled_LR_HelocDataset.pt  gen_model_relabeled_LR_LawDataset.pt  gen_model_relabeled_LR_MoonsDataset.pt  gen_model_relabeled_MLP_HelocDataset.pt  gen_model_relabeled_MLP_LawDataset.pt  gen_model_relabeled_MLP_MoonsDataset.pt
notebooks/: CEARM.ipynb  CF_Analysis.ipynb  GenDiscLoss_approach.ipynb  GenDisc_approach.ipynb  Gen_approach.ipynb  Gen_approach_old.ipynb  Gen_approach_v2.ipynb  Visualization.ipynb  WACH_method.ipynb  adult_disc_model.pt  adult_flow.pth  alternative_formulation.ipynb  alternative_formulations.ipynb  approach_GenDisc.ipynb  approach_three.ipynb  ares.ipynb  ares_cfs.ipynb  ares_dataset.ipynb  ares_datasets.ipynb  ares_eval.ipynb  ares_metrics.ipynb  audit_disc_model.pt  audit_flow.pth  best_model.pth  binning.ipynb  blobs_binary.ipynb  c_hvae_playground.ipynb  calc_metrics.ipynb  calculate_results.ipynb  categorical_ppcef copy.ipynb  categorical_ppcef.ipynb  cchvae.md  collect_results.ipynb  compas_GenDisc_approach.ipynb  credit_default_disc_model.pt  credit_default_flow.pt  d_no_reg.npy  d_reg.npy  data.csv  data.ipynb  (+72 more)
refactor_notebooks/: best_model.pth  check_adult_datasets.ipynb  kde_check.ipynb  lin_reg.ipynb  log_reg_adult.ipynb  log_reg_check.ipynb  logreg_adult.ipynb  mlp_classifier_check.ipynb  mlp_reg.ipynb  moons.ipynb  nn_reg.ipynb  ppcef.ipynb
reference/: index.html
scripts/: calculate_metrics.py  check_datasets_methods.py  concat_md.sh  dataset_method_metrics.csv  dataset_method_metrics.md  generate_latex_tables.py  generate_latex_tables_single_dataset.py  metrics_summary_20251119_150800.md  plot_moons_comparison.py  run_calculate_metrics.sh  run_global_benchmarks.sh
search/: search_index.json
slurm_jobs/: run_artelt.sh  run_cbce.sh  run_cegp.sh  run_cem.sh  run_ppcef.sh  run_wach.sh
small-tables/: results_regression_representative.tex
stylesheets/: extra.css
tables/: results_regression.tex
tests/: distances_test.py  metrics_test.py
user-guide/: index.html
(+5838 files in other folders)
