[project]
name = "counterfactuals"
version = "0.1.0"
description = "A package for demonstrating counterfactuals"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
  "torchdiffeq",
  "alibi[tensorflow]; sys_platform != 'win32'",
  "numpy",
  "scipy",
  "cvxpy",
  "scikit-learn",
  "hydra-core",
  "mlflow",
  "umap-learn",
  "nflows @ git+https://github.com/pfilo8/nflows.git",
  "UMNN",
  "pandas",
  "torch",
  "tqdm",
  "matplotlib",
  "plotly",
  "ipykernel",
  "dice-ml>=0.12",
]

# Tooling and test libs should be installed as an extra (dev) instead of runtime deps
[project.optional-dependencies]
dev = [
  "ruff",
  "pre-commit",
  "pytest",
]

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"counterfactuals/cf_methods/cet/*.py" = ["E741", "E711", "F841"]
"counterfactuals/cf_methods/ares/ares.py" = ["F841"]
"counterfactuals/cf_methods/globe_ce/globe_ce.py" = ["F841"]
"counterfactuals/pipelines/run_cet_pipeline.py" = ["F841"]
"counterfactuals/pipelines/run_lice_pipeline.py" = ["F841"]
