[project]
name = "counterfactuals"
version = "0.1.0"
description = "A package for demonstrating counterfactuals"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
  "torchdiffeq",
  "numpy",
  "scipy",
  "cvxpy",
  "scikit-learn",
  "hydra-core",
  "mlflow",
  "umap-learn",
  "nflows @ git+https://github.com/pfilo8/nflows.git",
  "UMNN",
  "pandas",
  "torch",
  "tqdm",
  "matplotlib",
  "plotly",
  "ipykernel",
  "dice-ml>=0.12",
  "mlxtend>=0.23.4",
  "pulp>=3.3.0",
  "lingam>=1.11.0",
  "networkx>=2.8,<3.0",
  "pytorch-tabnet",
  "pyfpgrowth",
  "scikit-image",
  "requests",
  "attrs",
  "dill",
  "transformers>=4.7.0,<5.0.0",
  "onnx<1.16.0",
  "ml-dtypes<0.5.0",
  "pyomo",
  "omlt",
  "tensorflow>=2.18.1",
  "alibi>=0.9.6",
  "mkdocs>=1.6.1",
  "mkdocs-material>=9.7.1",
  "mkdocstrings[python]>=1.0.0",
  "mkdocs-gen-files>=0.6.0",
  "mkdocs-literate-nav>=0.6.2",
  "mkdocs-section-index>=0.3.10",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "ruff>=0.13.3",
]

[build-system]
requires = ["setuptools >= 77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["counterfactuals"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"counterfactuals/cf_methods/cet/*.py" = ["E741", "E711", "F841"]
"counterfactuals/cf_methods/ares/ares.py" = ["F841"]
"counterfactuals/cf_methods/globe_ce/globe_ce.py" = ["F841"]
"counterfactuals/pipelines/run_cet_pipeline.py" = ["F841"]
"counterfactuals/pipelines/run_lice_pipeline.py" = ["F841"]
